--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^7.4.1",
     "@uploadthing/react": "^7.3.3",
     "bcryptjs": "^3.0.3",
+    "jspdf": "^4.2.0",
     "next": "16.1.6",
     "next-auth": "^5.0.0-beta.30",
     "pg": "^8.18.0",
