--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/adapter-pg": "^7.4.1",
     "@prisma/client": "^7.4.1",
     "@uploadthing/react": "^7.3.3",
+    "axios": "^1.13.5",
     "bcryptjs": "^3.0.3",
     "jose": "^6.1.3",
     "jspdf": "^4.2.0",
